Fixed with rows overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,9 +40,6 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
-  text-align: center;
-  align-self: center;
-  padding: 10px;
 }
 
 .past {
@@ -82,7 +79,7 @@ textarea {
   }
 
   .hour {
-    padding-right: 17%;
+    padding-right: 15%;
   }
 
   .saveBtn {
